fix: InlineToolbar z-index

--- a/contentful-extensions/editor-field/src/containers/InlineToolbar/InlineToolbar.scss
+++ b/contentful-extensions/editor-field/src/containers/InlineToolbar/InlineToolbar.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   padding: 3px;
   position: absolute;
-  z-index: 1;
+  z-index: 6;
   top: -10000px;
   left: -10000px;
   margin-top: -6px;
